Styling dashboard and forms

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,127 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+.empty-state {
+  @apply text-slate-300;
 }
 
-*/
+.box {
+  @apply flex flex-col bg-white shadow sm:rounded-lg;
+}
+
+.box .box-header {
+  @apply px-4 py-5 sm:px-6 border-b border-slate-200 flex flex-row items-center;
+}
+
+.box .box-header h1 {
+  @apply text-base font-semibold leading-6 text-slate-900 flex-1 min-h-8;
+}
+
+.box .box-header form {
+  @apply max-w-32;
+}
+
+.box .box-header form button {}
+
+.box .box-content {
+  @apply px-4 py-5 sm:p-6;
+}
+
+#login_form {
+  @apply min-h-full justify-center max-w-80 mx-auto;
+}
+
+#login_form h1 {
+  @apply text-center text-2xl font-bold leading-9 tracking-tight text-slate-900;
+}
+
+a.button,
+input[type='submit'],
+button[type='submit'] {
+  @apply rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600
+}
+
+a.button.button-secondary {
+  @apply bg-indigo-100 text-indigo-900 hover:bg-indigo-500 hover:text-white;
+}
+
+form {
+  @apply sm:mx-auto sm:w-full sm:max-w-sm flex flex-col gap-4 space-y-6;
+}
+
+.box form {
+  @apply max-w-none;
+}
+
+form .input label {
+  @apply block relative text-sm font-medium leading-6 text-slate-900;
+}
+
+form .input label abbr {
+  @apply absolute -left-2;
+}
+
+form .input select {
+  @apply block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6;
+}
+
+form .input .date_time {
+  @apply flex flex-row;
+}
+
+form .input input {
+  @apply block w-full rounded-md border-0 py-1.5 text-slate-900 shadow-sm ring-1 ring-inset ring-slate-300 placeholder:text-slate-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6;
+}
+
+form input[type='submit'] {
+  @apply flex w-full justify-center;
+}
+
+nav a {
+  @apply rounded-md px-3 py-2 text-sm font-medium text-white
+}
+
+nav .links,
+nav .session {
+  @apply flex flex-1 items-center justify-center sm:items-stretch space-x-4;
+}
+
+nav .links {
+  @apply sm:justify-start;
+}
+
+nav .session {
+  @apply sm:justify-end;
+}
+
+#flash div {
+  @apply border p-4 mb-8 shadow sm:rounded-lg sm:px-12 mx-auto text-center;
+}
+
+#flash div.flash-alert {
+  @apply bg-yellow-300 text-yellow-900 font-semibold;
+}
+
+#flash div.flash-notice {
+  @apply bg-blue-300 text-blue-900 font-semibold;
+}
+
+.list-item {
+  @apply relative flex justify-between gap-x-6 py-5 border p-4 rounded mb-2;
+}
+
+.list-item .body {
+  @apply flex flex-col min-w-0 gap-x-4;
+}
+
+.list-item .body h2 {
+  @apply font-semibold text-xl;
+}
+
+.list-item .body h3 {
+  @apply font-semibold text-lg;
+}
+
+.list-item .actions {
+  @apply flex shrink-0 items-center gap-x-4;
+}
