--- a/app/views/application/_user_nav.html.erb
+++ b/app/views/application/_user_nav.html.erb
@@ -1,6 +1,22 @@
-<%- if current_user %>
-  <%= current_user.first_name %>
-  <%= link_to t(".logout"), logout_path, data: { turbo_method: :delete } %>
-<%- else %>
-  <%= link_to t(".login"), login_path %>
-<%- end %>
+<nav class="bg-gray-800">
+  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+    <div class="relative flex h-16 items-center justify-between">
+      <%- if current_user %>
+        <div class="links">
+            <%= link_to t(".dashboard"), root_path %>
+            <%= link_to Appointment.model_name.human.pluralize, appointments_path  %>
+        </div>
+      <%- end %>
+      <div class="session">
+        <%- if current_user %>
+          <%= link_to current_user.first_name, "#" %>
+          <%= link_to t(".logout"), logout_path, data: { turbo_method: :delete } %>
+        <%- else %>
+          <%= link_to t(".login"), login_path %>
+        <%- end %>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
