--- a/app/views/appointments/update.turbo_stream.erb
+++ b/app/views/appointments/update.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace @appointment do %>
-    <%= render partial: current_user.patient_profile.appointments %>
+    <%= render partial: @appointment %>
 <% end %>
