--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,11 +11,11 @@
 }
 
 .box .box-header {
-  @apply px-4 py-5 sm:px-6 border-b border-slate-200 flex flex-row items-center;
+  @apply px-4 py-5 sm:px-6 border-b border-slate-200 flex flex-row items-center min-h-20;
 }
 
 .box .box-header h1 {
-  @apply text-base font-semibold leading-6 text-slate-900 flex-1 min-h-8;
+  @apply text-3xl font-thin leading-6 text-slate-900 flex-1;
 }
 
 .box .box-header form {
@@ -29,11 +29,11 @@
 }
 
 #login_form {
-  @apply min-h-full justify-center max-w-80 mx-auto;
+  @apply min-h-full justify-center max-w-80 mx-auto p-10;
 }
 
 #login_form h1 {
-  @apply text-center text-2xl font-bold leading-9 tracking-tight text-slate-900;
+  @apply text-center text-2xl font-light leading-9 tracking-tight text-slate-900;
 }
 
 a.button,
@@ -51,11 +51,11 @@ form {
 }
 
 .box form {
-  @apply max-w-none;
+  @apply max-w-none mb-10 border-b-slate-500;
 }
 
 form .input label {
-  @apply block relative text-sm font-medium leading-6 text-slate-900;
+  @apply block relative text-sm text-left leading-6 text-slate-900;
 }
 
 form .input label abbr {
@@ -125,4 +125,12 @@ nav .session {
 
 .list-item .actions {
   @apply flex shrink-0 items-center gap-x-4;
+}
+
+dl {
+  @apply grid grid-cols-[150px_1fr] gap-2;
+}
+
+dl dt {
+  @apply leading-6 font-light text-left;
 }
