--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,8 +1,8 @@
-<div class="grid grid-cols-2 gap-4">
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
     <div class="box">
         <div class="box-header">
             <h1><%= Appointment.model_name.human.pluralize %></h1>
-             <%= link_to t("appointment.new"), new_appointment_path, class:'button', data: { turbo_frame: dom_id(Appointment.new) } %>
+             <%= link_to t("appointments.new"), new_appointment_path, class:'button', data: { turbo_frame: dom_id(Appointment.new) } %>
         </div>
         <div class="box-content">
             <%= turbo_frame_tag Appointment.new do %>
