--- a/app/views/application/_user_nav.html.erb
+++ b/app/views/application/_user_nav.html.erb
@@ -11,6 +11,8 @@
         <%- if current_user %>
           <%= link_to current_user.first_name, profile_path %>
           <%= link_to t(".logout"), logout_path, data: { turbo_method: :delete } %>
+        <% else %>
+            <%= link_to t(".login"), login_path %>
         <%- end %>
       </div>
     </div>
